update report and tests

--- a/inst/report/report_contamination.Rmd
+++ b/inst/report/report_contamination.Rmd
@@ -2,6 +2,8 @@
 
 ```{r contamination, results='asis'}
 
+# TODO move this into report.R
+
 # maximum number of rows in a given chunked heatmap
 max.rows <- 30
 
