support for individual identification

--- a/inst/report/report_genotypes.Rmd
+++ b/inst/report/report_genotypes.Rmd
@@ -1,6 +1,6 @@
 ## Genotype Summary
 
-```{r genotypes, results='asis'}
+```{r genotypes, results="asis"}
 rmd_kable_genotypes(results,
                     locus_attrs,
                     report.hash_len,
