--- a/inst/report/report_identifications.Rmd
+++ b/inst/report/report_identifications.Rmd
@@ -1,5 +1,8 @@
 ## Identification with Known Genotypes
 
-```{r identifications}
-# TODO summarize in table the most likely identities per sample
+```{r identifications, results="asis"}
+rmd_kable_idents(results,
+                 hash.len = report.hash_len,
+                 range = report.dist_range,
+                 maximum = report.dist_max)
 ```
