--- a/inst/report/report_genotypes.Rmd
+++ b/inst/report/report_genotypes.Rmd
@@ -4,5 +4,7 @@
 rmd_kable_genotypes(results,
                     locus_attrs,
                     report.hash_len,
-                    report.locus_chunks)
+                    na.replicates = report.na.replicates,
+                    locus_chunks = report.locus_chunks,
+                    group_samples = report.group_samples)
 ```
