--- a/inst/report/report_alignments.Rmd
+++ b/inst/report/report_alignments.Rmd
@@ -1,8 +1,7 @@
 ## Allele Alignments per Locus
 
 ```{r alignments, results='asis'}
-locus_order <- order(match(names(results$alignments), rownames(locus_attrs)))
-invisible(lapply(names(results$alignments[locus_order]), function(loc) {
+invisible(lapply(names(results$alignments), function(loc) {
   cat(paste0("\n\n### Locus ", loc, "\n\n"))
   if (is.null(results$alignments[[loc]])) {
     cat(paste0("No sequences to align for Locus ", loc, "."))
