--- a/inst/report/report_genotypes.Rmd
+++ b/inst/report/report_genotypes.Rmd
@@ -1,12 +1,9 @@
 ## Genotype Summary
 
 ```{r genotypes, results="asis"}
-allele.names <- NULL
-if (!is.null(fp.allele.names))
-  allele.names <- read.table(fp.allele.names)
 rmd_kable_genotypes(results,
                     report.hash_len,
-                    allele.names = allele.names,
+                    allele.names = results$allele.names,
                     na.replicates = report.na.replicates,
                     locus_chunks = report.locus_chunks,
                     group_samples = report.group_samples)
