vary figure height for flag heatmaps
Ideally we should split these heatmaps (and all visualizations) into
reasonably-sized chunks, but for now I'm just calculating the height
needed based on the number of samples and replicates, using an arbitrary
fudge factor that seems to give a good real-life height.

--- a/inst/report/report.Rmd
+++ b/inst/report/report.Rmd
@@ -6,6 +6,10 @@ output:
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = report.echo, fig.width = 8, fig.height = 8)
+
+num.samples    <- length(unique(results$summary$Sample))
+num.replicates <- length(unique(results$summary$Replicate))
+num.loci       <- length(unique(results$summary$Locus))
 ```
 
 ```{r child="report_genotypes.Rmd", eval=report.sections[["genotypes"]]}
