call find_closest_matches in one place
Instead of determining the closest matching individuals twice (in
summarize_dataset and in the report generation) this just calls it once
in full_analysis.

--- a/inst/report/report_identifications.Rmd
+++ b/inst/report/report_identifications.Rmd
@@ -1,8 +1,5 @@
 ## Identification with Known Genotypes
 
 ```{r identifications, results="asis"}
-rmd_kable_idents(results,
-                 hash.len = report.hash_len,
-                 range = report.dist_range,
-                 maximum = report.dist_max)
+rmd_kable_idents(results, hash.len = report.hash_len)
 ```
