--- a/inst/report/report_genotypes.Rmd
+++ b/inst/report/report_genotypes.Rmd
@@ -2,8 +2,8 @@
 
 ```{r genotypes, results="asis"}
 rmd_kable_genotypes(results,
-                    report.hash_len,
                     allele.names = results$allele.names,
+                    hash.len = report.hash_len,
                     na.replicates = report.na.replicates,
                     locus_chunks = report.locus_chunks,
                     group_samples = report.group_samples)
