use locus_chunks for ident tables

--- a/inst/report/report_identifications.Rmd
+++ b/inst/report/report_identifications.Rmd
@@ -4,7 +4,8 @@
 rmd_kable_idents(results,
                  allele.names = results$allele.names,
                  hash.len = report.hash_len,
-                 na.replicates = report.na.replicates)
+                 na.replicates = report.na.replicates,
+                 locus_chunks = report.locus_chunks)
 ```
 
 ### Distance Matrix for Known Genotypes
