update report settings for dist matrix heatmaps
This now draws numbers in all non-diagonal heatmap cells for the
sample-to-sample distance matrix, and uses a threshold equal to the
report.dist_max value for the sample-to-known-individuals matrix.
plot_dist_mat now uses an NA value to mean "always label distances".

--- a/inst/report/report_identifications.Rmd
+++ b/inst/report/report_identifications.Rmd
@@ -11,5 +11,6 @@ rmd_kable_idents(results,
 ### Distance Matrix for Known Genotypes
 
 ```{r identifications_distances}
-plot_dist_mat(results$dist_mat_known)
+plot_dist_mat(results$dist_mat_known,
+              dist.display_thresh = report.dist_max)
 ```
