--- a/inst/report/report_distances.Rmd
+++ b/inst/report/report_distances.Rmd
@@ -1,5 +1,6 @@
 ## Inter-Sample Distance Matrix
 
 ```{r distances}
-plot_dist_mat(results$dist_mat)
+plot_dist_mat(results$dist_mat,
+              dist.display_thresh = NA)
 ```
