--- a/GUIDE.Rmd
+++ b/GUIDE.Rmd
@@ -4,7 +4,7 @@
 
 title: "CHIIMP User Guide"
 author: "Jesse Connell"
-date: "2018/02/19"
+date: "2018/02/20"
 output:
   pdf_document:
     toc: true
@@ -27,6 +27,10 @@ CHIIMP runs as a standalone tool, but is built as an [R] language package.  All
 functionality of the standalone program can be accessed from functions within R,
 and the reporting and visualization functions are designed to integrate well
 with [RStudio] and [R Markdown].
+
+This document mostly focuses on CHIIMP as a standalone tool.  For more
+information on the use of specific functions within R, also see the built-in
+package documentation.
 
 ## Installation
 
@@ -188,6 +192,103 @@ separated by a hyphen, for example, "180-fdd1c6" for a 180 bp sequence with no
 assigned name and particular sequence content.  Any other 180 bp sequence would
 receive a different suffix when the name is assigned.
 
+## Algorithm
+
+CHIIMP breaks the genotyping process into two parts.  First a sample file is 
+de-replicated and a table of unique sequences is created, with no filtering yet 
+applied.  Second the table is filtered to just candidate allele sequences, and 
+up to sequences are reported as the genotype.  Both the per-sample table and the
+final genotypes are saved in the final output, as spreadsheets in the
+`processed-samples` directory and as the `summary.csv` spreadsheet.
+
+### Sample Processing
+
+The table of unique sequences includes basic information for each case: sequence
+content, length, and read counts observed.  These are the Seq, Count, and Length
+columns.  The sequences are ordered by count with the most abundant first.
+
+Additional columns associate each sequence with a particular locus, using the 
+locus attributes described above.  First each locus' forward primer is compared 
+with the sequence and the matching locus name is stored in a MatchingLocus 
+column.  The sequence is then checked for several tandem repeats of the motif 
+for that locus, and compared to the length range expected for that locus. 
+TRUE/FALSE values for these are stored in MotifMatch and LengthMatch columns
+respectively.
+
+PCR artifacts can obscure real allele sequences with incorrect sequences.  There 
+are extra filters to attempt to remove these if possible or highlight cases that
+may require further attention.
+
+The sample data tables include "Stutter" and "Artifact" columns to mark entries 
+that look like possible polymerase stutter or other artifacts of another 
+sequence present at higher counts.  For cases of potential polymerase stutter,
+the higher-count sequence is one motif repeat longer.  For
+insertion/deletion/substitution artifacts the higher-count sequence is within 1
+bp of the same length.  In both cases the supposed artifact sequence will be
+marked if the read counts are 1/3 or lower than the higher-count sequence. 
+(This represents a trade-off in sensitivity and specificity since genuine allele
+sequences may differ in length by one or even zero repeats, and read counts for
+pairs of alleles in a given sample can vary considerably.)  Both of these
+columns store row numbers for the higher-count sequence that an artifact may
+have originated in, if found.  Note that relative sequence lengths and counts
+determine the outcome here, since sequence content for the artifacts is largely
+indistinguishable from real allele sequences.
+
+Lastly, the ratio of read counts for each sequence to the total reads in the
+sample and the reads with the same MatchingLocus value is stored in
+FractionOfTotal and FractionOfLocus columns respectively.
+
+This is the `analyze_sample` function in the R package.
+
+### Genotype Calling
+
+In the previous stage every single unique sequence for each data file was
+described in a table, but no filtering or genotyping occurred.  Now just one or
+two candidate allele sequences are extracted from each table and reported as the
+genotype.
+
+First, the table rows are restricted to just those matching the expected locus' 
+primer, motif, and length range (using the MatchingLocus, MotifMatch, and 
+LengthMatch columns).  If the resulting total read count is below a minimum 
+value (by default `r config.defaults$sample_summary$counts.min`, customizable
+via the `sample_summary: counts.min` setting) no genotyping will be attempted. 
+Next only those sequences accounting for at least a minimum fraction of the
+remaining reads are kept.  (The default value is
+`r config.defaults$sample_summary$fraction.min`.  This can be changed via the 
+`sample_summary: fraction.min` setting.)  Sequences that are marked as potential
+stutter or other artifacts (via the Stutter and Artifact columns of the table)
+are removed next.
+
+After these filters are applied, the top one or two remaining sequences are 
+reported as the alleles.  (If only one sequence remains, the sample is labeled 
+homozygous; if two or more, heterozygous.)  The details kept are:
+
+ * the sequence content, length, and counts for the one or two alleles
+ * the zygosity of the sample
+ * whether the stutter and/or artifact filter removed a potential allele
+ * The read counts of the entire sample before any filtering
+ * The read counts of just those sequences matching the locus primer, motif, and
+ length range
+
+This is the `summarize_sample` function in the R package.
+
+### Summary and Reporting
+
+The genotype and details identified in the previous step for each sample are 
+aggregated into a spreadsheet with a row for each sample.  This summary 
+spreadsheet and the more detailed per-sample tables are all saved in the final
+output.
+
+For inter-sample comparisons, the alleles identified across samples for each 
+locus are aligned to one another.  The genotypes for each sample are clustered
+by number of matching alleles, showing similarity between samples.  If a
+spreadsheet of known genotypes was given the sample genotypes are also compared
+to the known genotypes, with any close matches reported.  A single report
+document summarizes the genotyping and these other details.  See the Output Data
+Organization section below for more information on the output.
+
+These steps are handled by the `full_analysis` function in the R package.
+
 ## Usage
 
 CHIIMP takes a configuration file as input and saves all output to a 
@@ -290,16 +391,25 @@ configuration.
 
 ## Full Configuration Options List
 
+Configuration options list for CHIIMP version
+`r devtools::as.package(".")$version`.
+
 ```{r echo=FALSE, results='asis'}
 # Show all configuration defaults
 pretty_list <- function(data, indent="") {
   sapply(names(data), function(n) {
-    cat(indent, "*", n)
+    cat(indent, "*", "`", n, "`")
     if (is.list(data[[n]])) {
       cat("\n")
       pretty_list(data[[n]], indent = paste0(indent, "    "))
     } else {
-      cat(": ", data[[n]])
+      #cat(": ", gsub("\\", "\\\\", as.character(data[[n]]), fixed = TRUE))
+      txt <- if (is.null(data[[n]])) {
+        "NULL"
+      } else {
+        as.character(data[[n]])
+      }
+      cat(": ", "`", txt, "`")
       cat("\n")
     }
   })
