--- a/GUIDE.Rmd
+++ b/GUIDE.Rmd
@@ -4,7 +4,7 @@
 
 title: "CHIIMP User Guide"
 author: "Jesse Connell"
-date: "2018/02/20"
+date: "2018/03/26"
 output:
   pdf_document:
     toc: true
@@ -45,14 +45,14 @@ the package and R dependencies, and create a desktop shortcut.
 ### Linux
 
 On Linux, run the `install_linux.sh` shell script to automatically install the 
-package along with R dependencies.  A symbolic link to the program is created at
+package along with R dependencies.  An icon for the program is created at 
 `$HOME/Desktop/CHIIMP`.
 
 ### Mac OS
 
-On Mac OS, run the `install_mac.sh` shell script to automatically install the
-package along with R dependencies.  A symbolic link to the program is created
-at `$HOME/Desktop/CHIIMP`.
+On Mac OS, run the `install_mac.sh` shell script to automatically install the 
+package along with R dependencies.  An icon for the program is created at
+`$HOME/Desktop/CHIIMP`.
 
 ## Input Data Organization
 
@@ -65,8 +65,9 @@ The information CHIIMP uses during analysis is:
  * Spreadsheet of known individuals (optional)
  * Spreadsheet of named alleles (optional)
 
-The spreadsheets are in comma-separated (CSV) format.  Column names are
-important but not column order.  Extra columns are ignored.
+The spreadsheets are in comma-separated (CSV) format.  Column names are 
+important but not column order.  Extra columns are imported as-is but are
+otherwise ignored.
 
 ### Sequence Files
 
@@ -280,10 +281,10 @@ spreadsheet and the more detailed per-sample tables are all saved in the final
 output.
 
 For inter-sample comparisons, the alleles identified across samples for each 
-locus are aligned to one another.  The genotypes for each sample are clustered
-by number of matching alleles, showing similarity between samples.  If a
-spreadsheet of known genotypes was given the sample genotypes are also compared
-to the known genotypes, with any close matches reported.  A single report
+locus are aligned to one another.  The genotypes for each sample are clustered 
+by number of matching alleles, showing similarity between samples.  If a 
+spreadsheet of known genotypes was given, the sample genotypes are also compared
+to the known genotypes, with any close matches reported.  A single report 
 document summarizes the genotyping and these other details.  See the Output Data
 Organization section below for more information on the output.
 
@@ -303,7 +304,7 @@ spreadsheets to use for the samples and loci to analyze:
     fp_dataset: samples.csv
     fp_locus_attrs: locus_attrs.csv
 
-The configuration file can be dragged and dropped onto the desktop shortcut
+The configuration file can be dragged and dropped onto the desktop icon
 created during installation.
 
 For command-line usage, the configuration file can be given as the first 
@@ -337,6 +338,7 @@ spreadsheets listed here, see the "Input Data Organization" section above.
   * `fp_dataset`: file path to table of sample attributes to use (rather than 
     detecting sample attributes via dataset_opts)
   * `fp_locus_attrs`: file path to locus attributes CSV file
+  * `fp_allele_names`: file path to known alleles CSV file
   * `fp_genotypes_known`: file path to known genotypes CSV file
   * `dataset_opts`: Options related to automatically detecting sample attributes
     for a dataset (rather than loading a spreadsheet via fp_dataset)
@@ -362,9 +364,9 @@ A the end of an analysis CHIIMP creates a directory of files with all results.
  sample, and each spreadsheet here corresponds to a single row in the
  `summary.csv` file.
  * `histograms`: directory of counts-versus-length histograms for each sample. 
- Counts are tallied on a by-sequence basis rather than by-length, so the bars 
- for called alleles (in red) are generally shorter than the bars for unfiltered 
- sequences (in black) or the matching-locus sequences (in pink).
+ Counts are tallied on a by-sequence basis rather than by-length for alleles, so
+ the bars for called alleles (in red) are generally shorter than the bars for
+ unfiltered sequences (in black) or the matching-locus sequences (in pink).
  * `allele-sequences`: directory of FASTA files for each sample, giving just the
  sequence content also shown in `summary.csv`.  (This is a convenience feature
  to make the called alleles easily usable in a standard format, but the same 
@@ -384,10 +386,6 @@ post-analysis in R if desired.
 
 These directory and file names are customizable in the `output` section of the
 configuration.
-
-## Walkthrough
-
-\newpage
 
 ## Full Configuration Options List
 
