--- a/inst/report/report_genotypes.Rmd
+++ b/inst/report/report_genotypes.Rmd
@@ -3,6 +3,7 @@
 ```{r genotypes, results="asis"}
 rmd_kable_genotypes(results,
                     na.replicates = report.na.replicates,
+                    na.alleles = report.na.alleles,
                     locus_chunks = report.locus_chunks,
                     group_samples = report.group_samples,
                     closest = results$closest_matches)
