--- a/inst/report/report_genotypes.Rmd
+++ b/inst/report/report_genotypes.Rmd
@@ -2,9 +2,9 @@
 
 ```{r genotypes, results="asis"}
 rmd_kable_genotypes(results,
-                    na.replicates = report.na.replicates,
-                    na.alleles = report.na.alleles,
-                    locus_chunks = report.locus_chunks,
-                    group_samples = report.group_samples,
+                    na_replicates = report_na_replicates,
+                    na_alleles = report_na_alleles,
+                    locus_chunks = report_locus_chunks,
+                    group_samples = report_group_samples,
                     closest = results$closest_matches)
 ```
