--- a/inst/report/report_genotypes.Rmd
+++ b/inst/report/report_genotypes.Rmd
@@ -1,10 +1,5 @@
 ## Genotype Summary
 
 ```{r genotypes, results="asis"}
-rmd_kable_genotypes(results,
-                    na_replicates = cfg("report_na_replicates"),
-                    na_alleles = cfg("report_na_alleles"),
-                    locus_chunks = cfg("report_locus_chunks"),
-                    group_samples = cfg("report_group_samples"),
-                    closest = results$closest_matches)
+rmd_kable_genotypes(results, results$closest_matches)
 ```
